HLM-581 | Get context api
